# televault

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_local.sh
static/: index.html  manifest.json
tests/: conftest.py  test_cli.py  test_client.py  test_pyrogram.py  test_server.py
tg_media_store/: __init__.py  cli.py  client.py  fuse_mount.py  server.py  webdav.py
